src/modules/app/components/app/app.component.scss
.container {
  height: 100%;
}

.title {
  text-decoration: none;
  color: inherit;
}

.header--button__margin {
  margin-right: 1rem;
}

.module-loader {
  z-index: 1000;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

